--- a/src/GUI_1.fxml
+++ b/src/GUI_1.fxml
@@ -29,8 +29,8 @@
                   </Label>
                   <HBox>
                      <children>
-                        <TextField alignment="CENTER" prefHeight="25.0" prefWidth="423.0" promptText="type path" />
-                        <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="ACCEPT" />
+                        <TextField fx:id="pathToXmlValue" alignment="CENTER" prefHeight="25.0" prefWidth="423.0" promptText="type path" />
+                        <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#setPathToXml" prefHeight="25.0" prefWidth="86.0" text="ACCEPT" />
                      </children>
                   </HBox>
                </children>
@@ -38,12 +38,12 @@
             <HBox prefHeight="33.0" prefWidth="269.0" spacing="10.0">
                <children>
                   <Label alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="106.0" text="Consistency Ratio:" textAlignment="RIGHT" />
-                  <TextField prefHeight="40.0" prefWidth="75.0" text="0.1">
+                  <TextField fx:id="crValue" prefHeight="40.0" prefWidth="75.0" text="0.1">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="75.0" text="ACCEPT" />
+                  <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#setCrValue" prefHeight="40.0" prefWidth="75.0" text="ACCEPT" />
                </children>
             </HBox>
          </children>
@@ -85,7 +85,7 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="30.0" BorderPane.alignment="CENTER">
          <children>
-            <TextArea editable="false" prefHeight="105.0" prefWidth="880.0" text="Add alternatives, after accepting the alternatives you will not be able to add more.&#10;Consistency ratio set to 0.1">
+            <TextArea fx:id="infoArea" editable="false" prefHeight="105.0" prefWidth="880.0" text="Add alternatives and criteria, after accepting you will not be able to add more.&#10;Consistency ratio set to 0.1&#10;Specify the path to XML file">
                <font>
                   <Font size="18.0" />
                </font>
@@ -97,6 +97,20 @@
    <bottom>
       <HBox alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="1280.0" BorderPane.alignment="TOP_RIGHT">
          <children>
+            <AnchorPane prefHeight="45.0" prefWidth="1174.0">
+               <children>
+                  <Button fx:id="alternativesAccepted" layoutX="22.0" mnemonicParsing="false" onAction="#alternativesAcceptedButton" prefHeight="44.0" prefWidth="135.0" text="ACCEPT ALTERNATIVES">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="248.0" mnemonicParsing="false" onAction="#criteriaAcceptedButton" prefHeight="44.0" prefWidth="107.0" text="ACCEPT CRITERIA">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Reset all" />
          </children>
          <padding>
