--- a/src/GUI_AddCriterion.fxml
+++ b/src/GUI_AddCriterion.fxml
@@ -5,7 +5,6 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="80.0" prefWidth="372.0" text="ADD CRITERION">
@@ -13,16 +12,31 @@
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
-      <TextField fx:id="criterionNameField" layoutX="299.0" layoutY="172.0" prefHeight="64.0" prefWidth="283.0">
+      <TextField fx:id="criterionNameField" layoutX="300.0" layoutY="126.0" prefHeight="64.0" prefWidth="283.0">
          <font>
             <Font size="24.0" />
          </font>
       </TextField>
-      <Label alignment="CENTER" layoutX="380.0" layoutY="108.0" prefHeight="64.0" prefWidth="120.0" text="Name:" textAlignment="RIGHT">
+      <Label alignment="CENTER" layoutX="382.0" layoutY="87.0" prefHeight="39.0" prefWidth="120.0" text="Name:" textAlignment="RIGHT">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Button fx:id="acceptAddingCriterionButton" layoutX="387.0" layoutY="236.0" mnemonicParsing="false" onAction="#buttonAcceptAddingCriterion" prefHeight="39.0" prefWidth="106.0" text="SUBMIT" />
+      <Button fx:id="acceptAddingCriterionButton" layoutX="387.0" layoutY="352.0" mnemonicParsing="false" onAction="#buttonAcceptAddingCriterion" prefHeight="39.0" prefWidth="106.0" text="SUBMIT" />
+      <Label alignment="CENTER" layoutX="380.0" layoutY="205.0" prefHeight="32.0" prefWidth="120.0" text="Parent:" textAlignment="RIGHT">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <TextField fx:id="parentNameField" layoutX="300.0" layoutY="240.0" prefHeight="64.0" prefWidth="283.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </TextField>
+      <Label alignment="CENTER" layoutX="286.0" layoutY="304.0" prefHeight="20.0" prefWidth="312.0" text="Leave empty if this criterion is not a subcriterion" textAlignment="RIGHT">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
