--- a/src/GUI_Criterion.fxml
+++ b/src/GUI_Criterion.fxml
@@ -29,13 +29,9 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <ScrollPane fx:id="scrollPane" layoutX="299.0" layoutY="187.0" prefViewportHeight="104.0" prefViewportWidth="233.0">
-         <content>
-            <VBox fx:id="subcriteriaList" layoutX="299.0" layoutY="187.0" prefHeight="104.0" prefWidth="233.0" />
-         </content>
-      </ScrollPane>
+      <ScrollPane fx:id="scrollPane" layoutX="299.0" layoutY="187.0" prefViewportHeight="104.0" prefViewportWidth="233.0" prefWidth="250.0" />
       <Button layoutX="191.0" layoutY="360.0" mnemonicParsing="false" onAction="#addSubcriterion" prefHeight="45.0" prefWidth="132.0" text="ADD SUBCRITERION" />
-      <Button layoutX="335.0" layoutY="360.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="132.0" text="SPECIFY WEIGHTS" />
+      <Button layoutX="335.0" layoutY="360.0" mnemonicParsing="false" onAction="#specifyCriteriaWeights" prefHeight="45.0" prefWidth="132.0" text="SPECIFY WEIGHTS" />
       <Button layoutX="483.0" layoutY="360.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="132.0" text="SPECIFY PRIORITIES" />
    </children>
 </AnchorPane>
