--- a/src/GUI_SpecifyWeights.fxml
+++ b/src/GUI_SpecifyWeights.fxml
@@ -23,17 +23,8 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <ScrollPane fx:id="scrollPane" layoutX="299.0" layoutY="176.0" prefHeight="229.0" prefViewportHeight="104.0" prefViewportWidth="233.0" prefWidth="250.0">
-         <content>
-            <HBox fx:id="HBox" prefHeight="227.0" prefWidth="248.0">
-               <children>
-                  <VBox fx:id="toVBox" prefHeight="200.0" prefWidth="124.0" />
-                  <VBox fx:id="valueVBox" prefHeight="200.0" prefWidth="124.0" />
-               </children>
-            </HBox>
-         </content>
-      </ScrollPane>
-      <Button fx:id="acceptWeightsButton" layoutX="593.0" layoutY="360.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="132.0" text="ACCEPT" />
+      <ScrollPane fx:id="scrollPane" layoutX="299.0" layoutY="176.0" prefHeight="229.0" prefViewportHeight="104.0" prefViewportWidth="233.0" prefWidth="250.0" />
+      <Button layoutX="593.0" layoutY="360.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="132.0" text="ACCEPT" />
       <Label alignment="CENTER" layoutX="329.0" layoutY="142.0" prefHeight="23.0" prefWidth="62.0" text="TO" />
       <Label alignment="CENTER" layoutX="469.0" layoutY="145.0" text="VALUE" />
    </children>
