--- a/src/GUI_Criterion.fxml
+++ b/src/GUI_Criterion.fxml
@@ -32,6 +32,7 @@
       <ScrollPane fx:id="scrollPane" layoutX="299.0" layoutY="187.0" prefViewportHeight="104.0" prefViewportWidth="233.0" prefWidth="250.0" />
       <Button layoutX="191.0" layoutY="360.0" mnemonicParsing="false" onAction="#addSubcriterion" prefHeight="45.0" prefWidth="132.0" text="ADD SUBCRITERION" />
       <Button layoutX="335.0" layoutY="360.0" mnemonicParsing="false" onAction="#specifyCriteriaWeights" prefHeight="45.0" prefWidth="132.0" text="SPECIFY WEIGHTS" />
-      <Button layoutX="483.0" layoutY="360.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="132.0" text="SPECIFY PRIORITIES" />
+      <Button layoutX="632.0" layoutY="360.0" mnemonicParsing="false" onAction="#specifyPrioritiesButton" prefHeight="45.0" prefWidth="132.0" text="SPECIFY PRIORITIES" />
+      <Button layoutX="483.0" layoutY="360.0" mnemonicParsing="false" onAction="#applyWeights" prefHeight="45.0" prefWidth="132.0" text="APPLY WEIGHTS" />
    </children>
 </AnchorPane>
